:bug: Squished small overlay bug

--- a/src/app/modules/jamsession/jamsession.component.scss
+++ b/src/app/modules/jamsession/jamsession.component.scss
@@ -8,6 +8,7 @@
   left: 0;
   height: auto;
   position: fixed;
+  z-index: 2;
 }
 
 .notifications-anker {
